--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>this.music</title>
 </head>
 
 <body style="margin: 0; padding: 0; height: 100%; background-color: #E6DEDE;">
